--- a/playbooks/snow_attach_store_diagnostic_report.yml
+++ b/playbooks/snow_attach_store_diagnostic_report.yml
@@ -129,7 +129,8 @@
           Internet Egress: N/A 🔴<br />
           {% endif %}
           {% if not store_switch_dns_test.stderr | default("failed") %}
-          {% if store_switch_dns_test.stdout | regex_search("Translating.+domain\sserver\s\(\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}\)\s\[OK\]", multiline=True, ignorecase=False) %}
+          {% set dns_resolves = store_switch_dns_test.stdout | regex_search("Translating.+domain\sserver\s\(\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}\)\s\[OK\]", multiline=True, ignorecase=False) %}
+          {% if dns_resolves %}
           DNS Resolution Functional: Yes<br />
           {% else %}
           {% set issue.found = true %}
@@ -137,6 +138,7 @@
           {% endif %}
           {% else %}
           {% set issue.found = true %}
+          {% set dns_resolves = "unknown" %}
           DNS Resolution Functional: N/A 🔴<br />
           {% endif %}
           {% if not store_switch_connect_ws_site.stderr | default("failed") %}
@@ -368,6 +370,7 @@
           {% endif %}
           {% if not store_wide_web_reachable and
                   mpls_path_up and
+                  dns_resolves and
                   store_router_pingable and
                   store_switch_pingable %}
           ⏺ Store Wide Web is not reachable, contact Store App Support<br />
